# elt-velo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker_requirements.txt  init_app.sh  main.py  pyproject.toml  test.py
dags/: Dockerfile  pipeline.py
data/raw_data/2024-11-27/: nantes_realtime_bicycle_data.json  paris_realtime_bicycle_data.json  toulouse_realtime_bicycle_data.json
data/raw_data/2024-11-29/: nantes_realtime_bicycle_data.json  paris_realtime_bicycle_data.json  toulouse_realtime_bicycle_data.json
data/raw_data/2024-12-13/: nantes_realtime_bicycle_data.json  paris_realtime_bicycle_data.json  strasbourg_realtime_bicycle_data.json  toulouse_realtime_bicycle_data.json
data/raw_data/2024-12-14/: nantes_realtime_bicycle_data.json  paris_realtime_bicycle_data.json  strasbourg_realtime_bicycle_data.json  toulouse_realtime_bicycle_data.json
data/raw_data/2024-12-15/: nantes_realtime_bicycle_data.json  (+3 more)
dbt-transformation/: dbt_project.yml
dbt-transformation/groups/: analytics_group.yml
dbt-transformation/models/: schema.yml  source.yml
src/: data_agregation.py  data_consolidation.py  data_ingestion.py  data_transformation.py  duckdb_tools.py  ingestion.py  init_db.py  init_storage_layers.py  interface.py  main.py  minio_utils.py  query_duckdb.py  test.py  ui.py  utils.py
src/elt/: dbt_project.yml  profiles.yml
src/sql_statements/: alim_agregate_tables.sql  create_agregate_tables.sql  create_consolidate_tables.sql  create_staging_tables.sql  create_star_tables.sql  create_view.sql
src/transformation/: dbt_project.yml  profiles.yml
(+71 files in other folders)
