[project]
name = "etl-velo"
version = "0.4.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb (>=1.2.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "minio (>=7.2.16,<8.0.0)",
    "dbt-core (>=1.10.9,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.5"

