[project]
name = "etl-velo"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.11",
    "dbt-duckdb>=1.9.6",
    "duckdb>=1.4.0",
    "minio>=7.2.16",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "streamlit>=1.50",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.13.0",
]

